# token-metadata

./: README.md
.github/: .env
clients/rust/: Cargo.toml
configs/: kinobi.cjs  shank.cjs  validator.cjs
examples/js/test-create-mint-and-metadata/: index.ts  package-lock.json  package.json
idls/: token_metadata.json
metaplex-program-library/: .base-ammanrc.js  Anchor.toml
metaplex-program-library/bubblegum/js/: package.json
metaplex-program-library/candy-machine/program/src/: constants.rs
metaplex-program-library/core/rust/utils/: Cargo.toml
mpl-token-auth-rules/programs/token-auth-rules/: Cargo.toml
mpl-token-auth-rules/programs/token-auth-rules/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  payload.rs  pda.rs  types.rs  utils.rs
mpl-token-auth-rules/programs/token-auth-rules/src/processor/: create_or_update.rs  mod.rs  puff_rule_set.rs  validate.rs  write_to_buffer.rs
mpl-token-auth-rules/programs/token-auth-rules/src/state/: mod.rs  rule_set.rs  rules.rs
mpl-token-auth-rules/programs/token-auth-rules/src/state/v2/: mod.rs  rule_set_v2.rs  rule_v2.rs
mpl-token-auth-rules/programs/token-auth-rules/src/state/v2/constraint/: additional_signer.rs  all.rs  amount.rs  any.rs  frequency.rs  is_wallet.rs  namespace.rs  not.rs  pass.rs  pda_match.rs  program_owned.rs  program_owned_list.rs  program_owned_tree.rs  pubkey_list_match.rs  pubkey_match.rs  pubkey_tree_match.rs
mpl-token-auth-rules/programs/token-auth-rules/tests/: basic_royalty_enforcement.rs  namespace_royalty_enforcement.rs  namespace_royalty_enforcement_v2.rs  update_rule_set_v2.rs
programs/token-metadata/macro/src/: lib.rs
programs/token-metadata/program/: Cargo.toml
(+112 files in other folders)
