[package]
name = "mpl-token-auth-rules"
version = "1.4.3-beta.1"
description = "MPL Token Authorization Rules that can be used to restrict common token operations"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/mpl-token-auth-rules.git"
license-file = "../../LICENSE"
edition = "2021"
readme = "../../README.md"
keywords = ["nft", "metaplex", "solana", "blockchain"]

[dependencies]
borsh = "0.10.3"
bytemuck = "1.13.1"
# quote, syn
mpl-token-metadata-context-derive = { version = "0.2.1", path = "../../../metaplex-program-library/token-metadata/macro" }
num-derive = "0.3.3"
num-traits = "0.2"
rmp-serde = "1.1.1"
serde = { version = "1.0.149", features = ["derive"]}
serde_with = { version = "1.14.0", optional = true }
shank = "0.0.11"
domichain-program = { version = "=1.0.0", path = "../../../../domichain/sdk/program" }
domichain-zk-token-sdk = { version = "=1.0.0", path = "../../../../domichain/zk-token-sdk" }
thiserror = "1.0"

[features]
no-entrypoint = []
serde-with-feature = ["serde_with"]
test-sbf = []

[dev-dependencies]
assert_matches = "1.5.0"
serde_json = "1.0.87"
# solana-logger = ">= 1.14.13, < 1.17"
# solana-program-test = ">= 1.14.13, < 1.17"
# solana-sdk = ">= 1.14.13, < 1.17"
# spl-associated-token-account = { version = "1.1.1", features = ["no-entrypoint"] }
# spl-token = { version = "3.5.0", features = [ "no-entrypoint" ] }

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
